<resources>
    <string name="app_name">Belajar Android</string>
    <string name="button">Press here!</string>
    <string name="input_text">Masukkan sesuatu</string>
    <string name="naruto">naruto</string>
    <string name="sasuke">sasuke</string>
    <string name="text1">text1</string>
    <string name="text2">text2</string>
    <string name="text3">text3</string>
    <string name="text4">text4</string>
</resources>
