<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/abu">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hello World!"
                    android:textColor="@color/hitam"/>
                <EditText
                    android:id="@+id/inputText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/input_text"
                    android:hint="@string/input_text"
                    android:inputType="text"
                    android:textColor="@color/hitam" />
                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button"
                    android:textColor="@color/hitam" />
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <TextView
                    android:id="@+id/text1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/text1"
                    android:textColor="@color/hitam"
                    android:textSize="25sp"/>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/text2"
                        android:text="@string/text2"
                        android:textColor="@color/hitam"
                        android:textSize="25sp"/>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/text3"
                        android:text="@string/text3"
                        android:textColor="@color/hitam"
                        android:textSize="25sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/gambar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/naruto"
            android:src="@drawable/naruto" />
    </LinearLayout>
</layout>
